--- a/inventory/02-idm-test.yml
+++ b/inventory/02-idm-test.yml
@@ -2,8 +2,8 @@ idm_hub:
     children:
       ipaservers:
         hosts:
-          idm01.idm.hub.local
-          idm02.idm.hub.local
+          idm01.idm.hub.local:
+          idm02.idm.hub.local:
       ipareplicas:
         hosts:
-          idm02.idm.hub.local
+          idm02.idm.hub.local:
