--- a/inventory/03-idm-test.yml
+++ b/inventory/03-idm-test.yml
@@ -2,8 +2,8 @@ idm_bofh:
     children:
       ipaservers:
         hosts:
-          idm01.idm.bofh.local
-          idm02.idm.bofh.local
+          idm01.idm.bofh.local:
+          idm02.idm.bofh.local:
       ipareplicas:
         hosts:
-          idm02.idm.bofh.local
+          idm02.idm.bofh.local:
