--- a/inventory/03-idm-test.yml
+++ b/inventory/03-idm-test.yml
@@ -2,8 +2,11 @@ idm_bofh:
     children:
       ipaservers:
         hosts:
-          idm01.idm.bofh.local: env=ipabofh
-          idm02.idm.bofh.local: env=ipabofh
+          idm01.idm.bofh.local:
+            env: idmbofh
+          idm02.idm.bofh.local:
+            env: idmbofh
       ipareplicas:
         hosts:
-          idm02.idm.bofh.local: env=ipabofh
+          idm02.idm.bofh.local:
+            env: idmbofh
